# ViewDesign

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Example/win32/: CMakeLists.txt  HotReload.cpp
Example/win32-vulkan/: CMakeLists.txt  SceneEmbedding.cpp  placeholder.cpp
Example/win32-vulkan/shader/: CMakeLists.txt
Test/: CMakeLists.txt  Demo.cpp  DesktopFrameTest.cpp  DivideLayoutTest.cpp  FlowLayoutTest.cpp  ListLayoutTest.cpp  OverlapLayoutTest.cpp  ScaleFrameTest.cpp  ScrollFrameTest.cpp  SplitLayoutTest.cpp  TabViewTest.cpp  TextBoxHelper.h  TextBoxTest.cpp  TextViewTest.cpp  WindowTest.cpp  text_box_helper.h  trait_name.h
ViewDesign/: CMakeLists.txt
ViewDesign/backend/: CMakeLists.txt
ViewDesign/backend/directx/: CMakeLists.txt  bitmap.cpp  image.cpp  layer.cpp  shape.cpp  text_block.cpp
ViewDesign/backend/glfw/: CMakeLists.txt  clipboard.cpp  cursor.cpp  desktop.cpp  event_loop.cpp  region.cpp  timer.cpp  window.cpp
ViewDesign/backend/glfw-opengl/: CMakeLists.txt  main.cpp  surface.cpp  test.cpp  window_layer.cpp
ViewDesign/backend/glfw-vulkan/: CMakeLists.txt  main.cpp  surface.cpp
ViewDesign/backend/opengl/: CMakeLists.txt  bitmap.cpp  image.cpp  layer.cpp  shape.cpp
ViewDesign/backend/stb-opengl/: CMakeLists.txt  image.cpp
ViewDesign/backend/stb-vulkan/: CMakeLists.txt  image.cpp
ViewDesign/backend/text_layout_placeholder/: CMakeLists.txt  text_block.cpp
ViewDesign/backend/vulkan/: CMakeLists.txt  bitmap.cpp  layer.cpp  shape.cpp  text_block.cpp  texture.cpp
ViewDesign/backend/win32/: CMakeLists.txt  aero_snap.cpp  aero_snap.h  clipboard.cpp  cursor.cpp  d2d_api.h  d3d_api.h  dcomp_api.h  desktop.cpp  directx_helper.h  directx_resource.cpp  directx_resource.h  dwrite_api.h  dxgi_api.h  event_loop.cpp  ime.cpp  ime.h  region.cpp  timer.cpp  wic_api.h  win32_api.cpp  win32_api.h  win_main.cpp  window.cpp
ViewDesign/backend/win32-directx/: CMakeLists.txt  main.cpp  surface.cpp  window_layer.cpp
ViewDesign/backend/win32-opengl/: CMakeLists.txt  main.cpp  surface.cpp  window_layer.cpp
ViewDesign/backend/win32-vulkan/: CMakeLists.txt  main.cpp  surface.cpp  test.cpp  window_layer.cpp
ViewDesign/common/: core.h  coroutine.h  function_traits.h  holder.h  index_range.h  reversion_wrapper.h  text_layout_placeholder.h  text_range.h  tile_range.h  tuple_helper.h  type.h  uncopyable.h  unicode.cpp  unicode.h  unicode_helper.cpp  unicode_helper.h  word_iterator.cpp  word_iterator.h
ViewDesign/control/: Button.h  ImageBox.h  Placeholder.h  TextBox.h
ViewDesign/drawing/: bitmap.h  canvas.h  color.h  drawing.h  figure.h  helper.h  image.cpp  image.h  layer.cpp  layer.h  pixel_buffer.h  shape.h  surface.h  text_block.h  texture.h  window_layer.h
ViewDesign/event/: event.h  focus_event.h  ime.cpp  ime.h  key_event.h  key_tracker.h  mouse_event.h  mouse_tracker.h  timeout.h  timer.cpp  timer.h
ViewDesign/figure/: canvas.h  desktop_layer.h  figure_queue.h  image.cpp  layer.cpp  layer.h  text_block.cpp  text_block.h  window_layer.cpp
ViewDesign/frame/: BackgroundFrame.h  BorderFrame.h  CenterFrame.h  ClipFrame.h  DesktopFrame.cpp  DesktopFrame.h  FixedFrame.h  InnerBorderFrame.h  LayerFrame.cpp  LayerFrame.h  MaxFrame.h  MinFrame.h  PaddingFrame.h  ScaleFrame.h  ScrollFrame.h  ViewFrame.h  ViewFrameMutable.h
ViewDesign/geometry/: border_helper.h  border_position.h  clamp.h  geometry.h  helper.h  index_range.h  interval.h  margin.h  point.h  rect.h  region.h  scale.h  size.h  sizeu.h  text_range.h  tiling.h  transform.cpp  transform.h  vector.h
ViewDesign/layout/: DivideLayout.h  FlowLayout.cpp  FlowLayout.h  ListLayout.cpp  ListLayout.h  ListLayoutAuto.cpp  ListLayoutAuto.h  OverlapLayout.cpp  OverlapLayout.h  SplitLayout.h  StackLayout.h  TableLayout.h
ViewDesign/message/: context.cpp  context.h  ime.cpp  ime.h  timer.cpp
ViewDesign/messaging/: context.cpp  context.h  observable.h  signal.h  state.h  trackable.h
ViewDesign/platform/: CMakeLists.txt
ViewDesign/platform/directx/: CMakeLists.txt  canvas.h  d2d_api.h  d3d_api.h  dcomp_api.h  directx_helper.h  directx_resource.cpp  directx_resource.h  dwrite_api.h  dxgi_api.h  helper.h  render_target.h  resource.cpp  resource.h  string.h  wic_api.h
ViewDesign/platform/glad/: CMakeLists.txt  canvas.h  frame_buffer.h  framebuffer.h  render_target.h  texture.h
ViewDesign/platform/glfw/: CMakeLists.txt  context.h  cursor.cpp  cursor.h  key.h  string.h  timer.cpp  timer.h  timer_queue.h  window.h
ViewDesign/platform/icu/: CMakeLists.txt
ViewDesign/platform/opengl/: CMakeLists.txt
ViewDesign/platform/stb/: CMakeLists.txt  image.h
ViewDesign/platform/vulkan/: CMakeLists.txt  canvas.h  debug_messenger.h  descriptor_pool.h  device.h  frame_in_flight.h  framebuffer.h  geometry_helper.h  image.h  instance.h  pipeline.h  registry.h  render_pass.h  render_target.h  rendering.h  sampler.h  shader_module.h  staging_buffer.h  surface.h  texture.h  vertex_buffer.h  window_surface.h
ViewDesign/platform/win32/: CMakeLists.txt  aero_snap.cpp  aero_snap.h  clipboard.cpp  clipboard.h  context.h  cursor.cpp  cursor.h  ime.h  (+17 more)
ViewDesign/style/: border_style.h  cursor_style.h  length_style.h  length_style_helper.h  text_block_style.h  value_tag.h
ViewDesign/system/: clipboard.cpp  clipboard.h  cursor.h  d2d_api.h  d3d_api.h  dcomp_api.h  desktop.h  directx_helper.h  directx_resource.cpp  directx_resource.h  dwrite_api.h  dxgi_api.h  event_loop.h  win32_aero_snap.cpp  win32_aero_snap.h  win32_api.cpp  win32_api.h  win_main.cpp  window.h
ViewDesign/view/: Desktop.cpp  Desktop.h  DesktopFrame.cpp  DesktopFrame.h  Global.cpp  Global.h  ViewBase.cpp  ViewBase.h  ViewFrame.h  Window.cpp  Window.h  view_traits.h
ViewDesign/widget/: RadioGroup.h  TabView.h  TitleBarFrame.h  Tooltip.cpp  Tooltip.h
ViewDesign/window/: Global.cpp  Global.h  ViewBase.cpp  ViewBase.h  desktop.cpp  view_traits.h
ViewDesign/wrapper/: Background.h  Cursor.h  DelayedUpdate.h  HitTestHelper.h
(+273 files in other folders)
